--- a/webapp/src/ionicapp/www/templates/oTAFirmwareUpdate.html
+++ b/webapp/src/ionicapp/www/templates/oTAFirmwareUpdate.html
@@ -100,6 +100,9 @@
         </table>
       </div>
     </form>
+    <div id="oTAFirmwareUpdate-markdown497" ng-show="data.devicename == &quot;All devices&quot;" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#AAAAAA;font-size:10px;">If a device is offline, it will automatically be updated upon device bootup.</p>
+    </div>
     <form id="oTAFirmwareUpdate-form221" class="list">
       <div id="oTAFirmwareUpdate-markdown353" class="show-list-numbers-and-dots"></div>
       <div id="oTAFirmwareUpdate-markdown354" class="show-list-numbers-and-dots">
