--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -79,6 +79,11 @@ table, th, td {
 	display: inline-block;
 }
 
+.card_image_device {
+	vertical-align: text-bottom;
+	display: inline-block;
+}
+
 .card_label_devices {
 	display: inline-block;
 	height: 16px;
@@ -106,6 +111,17 @@ table, th, td {
 
 .device_info_top_ex {
 	width: 50% !important;
+	display: inline-block;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	height: 10px;
+	margin-left: 0px;
+}
+
+.device_info_top_ex2 {
+	width: 40% !important;
 	display: inline-block;
 	padding-top: 0px;
 	padding-bottom: 0px;
