--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9862,6 +9862,10 @@ table, th, td {
   margin-left: 15px;
   display: inline-block; }
 
+.card_image_device {
+  vertical-align: text-bottom;
+  display: inline-block; }
+
 .card_label_devices {
   display: inline-block;
   height: 16px; }
@@ -9885,6 +9889,16 @@ table, th, td {
 
 .device_info_top_ex {
   width: 50% !important;
+  display: inline-block;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  height: 10px;
+  margin-left: 0px; }
+
+.device_info_top_ex2 {
+  width: 40% !important;
   display: inline-block;
   padding-top: 0px;
   padding-bottom: 0px;
