--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -6,11 +6,11 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "../www/lib/ionic/scss";
 table, th, td {
 	border-collapse: collapse;
-	padding: 12px;
-	text-align: center;
+	padding: 4px;
+	text-align: left;
 	border-bottom: 1px solid #ddd;
 	color: #444444;
-	font-size: 16px;
+	font-size: 13px;
 }
 
 #chartjs-tooltip {
@@ -87,6 +87,10 @@ table, th, td {
 .card_label_devices {
 	display: inline-block;
 	height: 16px;
+}
+
+.card_label_dashboard_table {
+	display: inline-block;
 }
 
 .card_label_devicegroups {
@@ -194,6 +198,10 @@ table, th, td {
 .widget_title_half_50 {
 	width: 49% !important;
 	display: inline-block;
+}
+
+.widget_whole {
+	width: 98% !important;
 }
 
 .widget_half {
