--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -35,6 +35,26 @@ table, th, td {
 	font-size: 10px;
 }
 
+.d3node circle {
+	fill: #DDDDDD;
+	stroke: #FFFFFF;
+	stroke-width: 1px;
+}
+
+.d3node text {
+	font: 12px sans-serif;
+	fill: #3C5A99}
+.d3link {
+	fill: none;
+	stroke: #DDDDDD;
+	stroke-width: 1px;
+}
+
+.d3container {
+	width: 99% !important;
+	background-color: #FFF;
+}
+
 .img_logo {
 	top: 35%;
 }
