--- a/webapp/src/ionicapp/www/templates/device.html
+++ b/webapp/src/ionicapp/www/templates/device.html
@@ -100,6 +100,11 @@
         </div>
       </div>
     </div>
-    <div class="spacer" style="width: 748px; height: 50px;"></div>
+    <div class="list card d3container" id="device-card219">
+      <div class="hierarchychart" width="1000" height="450">
+        <svg id="{{data.devicename}}" width="1000" height="450">
+        </svg>
+      </div>
+    </div>
   </ion-content>
 </ion-view>
