--- a/webapp/src/ionicapp/www/templates/device.html
+++ b/webapp/src/ionicapp/www/templates/device.html
@@ -64,6 +64,7 @@
         </div>
       </div>
     </div>
+    <div class="spacer" style="height: 3px;"></div>
     <div class="list card widget_button_half_device" id="device-card213" ng-click="submitI2C()">
       <div class="item item-body" id="device-list-item-container46">
         <div id="device-markdown514" style="text-align:center;" class="show-list-numbers-and-dots">
@@ -82,6 +83,7 @@
         </div>
       </div>
     </div>
+    <div class="spacer" style="width: 747.778px; height: 3px;"></div>
     <div class="list card widget_button_half_device" id="device-card215" ng-click="submit1WIRE()">
       <div class="item item-body" id="device-list-item-container48">
         <div id="device-markdown516" style="text-align:center;" class="show-list-numbers-and-dots">
