--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -195,6 +195,11 @@ table, th, td {
 	margin: 0% auto;
 }
 
+.page_width_dashboard {
+	max-width: 1700px;
+	margin: 0% auto;
+}
+
 .page_width_small {
 	max-width: 500px;
 	margin: 0% auto;
@@ -226,6 +231,11 @@ table, th, td {
 
 .widget_half {
 	width: 49% !important;
+	display: inline-block;
+}
+
+.widget_quarter {
+	width: 24.5% !important;
 	display: inline-block;
 }
 
@@ -281,6 +291,16 @@ table, th, td {
 
 .widget_button_80 {
 	width: 79% !important;
+	display: inline-block;
+}
+
+.widget_button_40 {
+	width: 39% !important;
+	display: inline-block;
+}
+
+.widget_button_60 {
+	width: 59% !important;
 	display: inline-block;
 }
 
